chore: restructure things a bit and add docs

--- a/examples/index.html
+++ b/examples/index.html
@@ -55,7 +55,7 @@
     <label for="outputText">Output:</label>
     <textarea id="outputText" placeholder="Output will be shown here..." readonly></textarea>
 
-    <script src="/dist/browser/estism.js"></script>
+    <script src="/dist/browser/extism.js"></script>
 
     <script>
         async function runPlugin() {
