fix: address PR feedback

--- a/examples/index.html
+++ b/examples/index.html
@@ -74,7 +74,7 @@
                 .withWasi()
                 .withAllowedHosts(hosts);
 
-            const plugin = await ExtismPlugin.newPlugin(wasm, options);
+            const plugin = await ExtismPlugin.new(wasm, options);
 
             const res = await plugin.call(funcname, new TextEncoder().encode(input));
             const s = new TextDecoder().decode(res.buffer);
