--- a/examples/index.html
+++ b/examples/index.html
@@ -58,7 +58,7 @@
     <script type="module" src="/dist/browser/index.mjs"></script>
 
     <script type="module">
-        import { createPlugin } from '/dist/browser/index.mjs';
+        import createPlugin from '/dist/browser/index.mjs';
 
         async function runPlugin() {
             // Get values from input fields
@@ -71,12 +71,11 @@
                 url: url
             }
 
-            const options = new ExtismPluginOptions()
-                .withConfig("thing", "testing")
-                .withWasi()
-                .withAllowedHosts(hosts);
-
-            const plugin = await createPlugin(wasm, options);
+            const plugin = await createPlugin(wasm, {
+                useWasi: true,
+                config: { "thing": "testing" },
+                allowedHosts: [ ...hosts ]
+            });
 
             const res = await plugin.call(funcname, new TextEncoder().encode(input));
             const s = new TextDecoder().decode(res.buffer);
