fix: allowedHosts only applies to background plugins
Extism HTTP host functions are only available when running the plugin in
the background on a worker; throw an error when attempting to specify
allowedHosts on a foreground worker.

Fixes #56.

--- a/examples/index.html
+++ b/examples/index.html
@@ -67,6 +67,7 @@
           useWasi: true,
           config: { thing: 'testing' },
           allowedHosts: [...hosts],
+          runInWorker: true,
         });
 
         const res = await plugin.call(funcname, new TextEncoder().encode(input));
