--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ contexts.</p>
 <p>Plug-in code can come from a file on disk, object storage or any number of places. Since you may not have one handy let&#39;s load a demo plug-in from the web:</p>
 <pre><code class="language-js"><span class="hl-4">const</span><span class="hl-1"> </span><span class="hl-5">plugin</span><span class="hl-1"> = </span><span class="hl-6">await</span><span class="hl-1"> </span><span class="hl-0">createPlugin</span><span class="hl-1">(</span><br/><span class="hl-1">    </span><span class="hl-2">&#39;https://github.com/extism/plugins/releases/latest/download/count_vowels.wasm&#39;</span><span class="hl-1">,</span><br/><span class="hl-1">    { </span><span class="hl-7">useWasi:</span><span class="hl-1"> </span><span class="hl-4">true</span><span class="hl-1"> }</span><br/><span class="hl-1">);</span>
 </code><button>Copy</button></pre>
+<blockquote>
+<p><em>Note</em>: Plug-ins can be loaded in a variety of ways. See the reference docs for <a href="https://extism.github.io/js-sdk/functions/createPlugin.html">createPlugin</a>
+and read about the <a href="https://extism.org/docs/concepts/manifest/">manifest</a>.</p>
+</blockquote>
 <a id="md:calling-a-plug-in39s-exports" class="tsd-anchor"></a><h2><a href="#md:calling-a-plug-in39s-exports">Calling A Plug-in&#39;s Exports</a></h2><p>We&#39;re using a plug-in, <code>count_vowels</code>, which was compiled from Rust.
 <code>count_vowels</code> plug-in does one thing: it counts vowels in a string. As such,
 it exposes one &quot;export&quot; function: <code>count_vowels</code>. We can call exports using
